[tool.poetry]
name = "grafive"
version = "0.1.0"
description = ""
authors = ["Torres <jocta.torres@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest-cov = "^2.11.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
flake8 = "^3.8.4"
black = "^20.8b1"
isort = "^5.6.4"
autoflake = "^1.4"
mypy = "^0.790"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
